--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,9 @@
   "description": "pagination, filter and sorting",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "server": "nodemon server.js",
+    "start": "node server.js",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "author": "Jahangeer",
   "license": "ISC",
