--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "pagination, filter and sorting",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon server.js",
-    "start": "node server.js",
+    "server": "nodemon api/server.js",
+    "start": "node api/server.js",
     "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "author": "Jahangeer",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.1",
     "mongoose": "^6.3.5",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.22"
   }
 }
