changed client react_app api

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL = http://localhost:5000/api/movies
+# REACT_APP_API_URL = http://localhost:5000/api/movies
+REACT_APP_API_URL = https://react-imdb.onrender.com/api/movies
